[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Levels/BossLevel/BossPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Levels/BossLevel/ColorRect.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/BossLevel/BossLevel.gd" type="Script" id=3]
[ext_resource path="res://src/Levels/BossLevel/BossGreenSection.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/BossLevel/BossUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Levels/BossLevel/BossRedSection.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Levels/BossLevel/BossBlueSection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/Ubuntu-R.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 8 )

[node name="BossLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.321569, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.5
margin_top = -41.0
margin_right = 182.5
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossUI" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 480.274, 481.788 )

[node name="BossGreenSection" parent="." instance=ExtResource( 4 )]
position = Vector2( 668.17, 95.2959 )

[node name="BossRedSection" parent="." instance=ExtResource( 6 )]
position = Vector2( 507.627, 104.81 )

[node name="BossBlueSection" parent="." instance=ExtResource( 7 )]
position = Vector2( 311.407, 109.566 )
